@@ -243,8 +243,8 @@ void tilp_vars_translate(char *utf8)
 	v = utf8;
 	if(v[1] == 0xE2 && v[2] == 0x82 && v[3] >= 0x80 && v[3] <= 0x89)
 	{	
-	utf8[1] = v[3] - 0x80 + '0';
-	utf8[2] = '\0';
+		utf8[1] = v[3] - 0x80 + '0';
+		utf8[2] = '\0';
 	}
 #endif
 }
