@@ -6,6 +6,7 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 	- implemented full TiGroup support (ram, archive and flash)
 	- fixed NULL dereference in filesel.c (kevin)
 	- refresh right frame after var retrieval
+	- fixed bad displaying of lists on TI84+ due to bad translation of CalcModel value.
 
 - 18/06/2006, version 0.17 (0.1.1, 0.2.2, 0.2.0, 0.0.3): roms
 	- changes in tifiles API (TiGroup)
